Fixes TCA alignment for desktop

--- a/cassess/projects/fementor/tip-calculator-app/styles/main.css
+++ b/cassess/projects/fementor/tip-calculator-app/styles/main.css
@@ -155,7 +155,7 @@ html {
 /* LAYOUT */
 .top-grid-layout {
   display: grid;
-  grid-template-rows: auto 1fr auto;
+  grid-template-rows: 1fr 3fr auto;
   grid-template-columns:
     minmax(0, var(--spacing-1000))
     minmax(375px, auto)
@@ -215,7 +215,8 @@ html {
    Header */
 .splitter-header {
   grid-column: 1 / -1;
-  margin: 50px 0 40px;
+  align-self: center;
+  padding: 45px 0;
 }
 
 .splitter-logo {
@@ -454,9 +455,6 @@ html {
 
   /* MAIN STYLES
      Header */
-  .splitter-header {
-    margin: 162px 0 88px;
-  }
 
   /* Application */
   .splitter-main_container {
